# webcomfy

./: .gitignore  .gitmodules  MODEL_API_SPEC.md  README.md  WILDCARD_SEMANTICS.md  analyze.py  comfy.py  configs.py  embed.py  example.env  localstore.py  main.py  modelapi.py  models.py  pipeline.py  prompt.py  pyproject.toml  pyrightconfig.json  repro.py  server.py  servers.py  setup_comfyui.sh  storage.py  viewer.py  workflow.py
scripts/: gen_keypair.py
src/: paths.py
src/comfy/: modelapi.py
src/store/: configs.py  embed.py  localstore.py  servers.py  storage.py
src/web/: server.py  viewer.py
static/: index.html  main.js  models.css  models.html  models.js  style.css  style_v2.css  v2.html  viewer.css  viewer.html  viewer.js
tests/: test_prompt_sampling.py  test_viewer_folders.py
