[project]
name = "comfy-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.29.0",
    "websocket-client>=1.7.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.14.1",
    "pyright>=1.1.380",
    "types-requests>=2.31.0",
]
